--- a/OdwykLab.Frontend/OdwykLab.Frontend.csproj
+++ b/OdwykLab.Frontend/OdwykLab.Frontend.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
+    <ProjectReference Include="..\OdwykLab.Domain\OdwykLab.Domain.csproj" />
   </ItemGroup>
 
 </Project>
